# SAMJax

./: KEY_FINDINGS.md  README.md  environment.yml  pyproject.toml
.claude/: IRMA_DEBUG_FIX_SUMMARY.md  Oracle_Tensor_Structure.md  recap_jsam.md  settings.json
automatic_debug/: context.md
autoresearch/: QUICKSTART.md  compare.py  config.yaml  convergence.json  design.md  instructions.md  progress.md  run_iteration.py  watch-iteration.sh
docs/: jsam_vs_gsam_differences.md  pbs_jobs_guide.md
jsam/: __init__.py
jsam/core/: debug_dump.py  state.py  step.py
jsam/io/: era5.py  era5_binary.py  gsam_binary.py  gsam_era5_init.py  restart.py  slm_forcing.py  slm_init.py  writer.py
jsam/physics/: microphysics.py  sgs.py
jsam/utils/: IRMALoader.py
matching_tests/: README.md  run_all.sh  run_all_new.sh
matching_tests/common/: __init__.py  bin_io.py  compare.py  env.sh  scaffold_run.sh
matching_tests/test_adams/: driver.f90  dump_inputs.py  run.sh
matching_tests/test_adamsb_p_buffer/: driver.f90  dump_inputs.py  run.sh
matching_tests/test_advect_mom_native/: dump_inputs.py  run.sh
matching_tests/test_advection/: driver.f90  dump_inputs.py  run.sh
matching_tests/test_buoyancy/: driver.f90  dump_inputs.py  run.sh
matching_tests/test_consts/: driver.f90  dump_inputs.py  run.sh
matching_tests/test_coriolis/: driver.f90  dump_inputs.py  (+1 more)
scripts/: compare_debug_globals.py  compare_oracle.py  run.py  run_irma.py  run_irma_debug30_fixed.pbs  run_irma_debug500.pbs  run_irma_debug500.sh  run_irma_debug5_gpu.pbs  run_irma_debug_3ts.pbs  test_debug_small.pbs
(+178 files in other folders)
